--- a/wisdomCampus/html/checkNotice/all-list.html
+++ b/wisdomCampus/html/checkNotice/all-list.html
@@ -408,7 +408,7 @@
 
 				$1.ready(function() {
 					var getNotice = function(pullRefresh,id, title, callback) { //10.获取发送的通知公告列表
-						//					$.showLoading();
+						//					events.showWaiting();
 						console.log("1111111111111" + title)
 						var current_data = datasource[title];
 						var refreshObj = current_data.refreshObj
@@ -430,7 +430,7 @@
 							}
 							getSendNoticePro(tempData, function function_name(data) {
 								console.log(JSON.stringify(data))
-								//							$.hideLoading();
+								//							events.closeWaiting();
 								if(data.RspCode == 0) {
 									datasource[title].refreshObj.TotalPage = data.RspData.TotalPage;
 									if(datasource[title].refreshObj.refreshFlag == 0) {
@@ -467,7 +467,7 @@
 								pageSize: '10' //每页记录数
 							}
 							getReceiveNoticePro(tempData, function function_name(data) {
-								//							$.hideLoading();
+								//							events.closeWaiting();
 								console.log(JSON.stringify(data))
 								if(data.RspCode == 0) {
 									datasource[title].refreshObj.TotalPage = data.RspData.TotalPage;
@@ -498,7 +498,7 @@
 
 							getAffairApplyPro(tempData, function function_name(data) {
 								console.log(JSON.stringify(data))
-								//							$.hideLoading();
+								//							events.closeWaiting();
 								if(data.RspCode == 0) {
 									datasource[title].refreshObj.TotalPage = data.RspData.TotalPage;
 									if(datasource[title].refreshObj.refreshFlag == 0) {
@@ -541,7 +541,7 @@
 							}
 
 							getAffairApprovePro(tempData, function function_name(data) {
-								//							$.hideLoading();
+								//							events.closeWaiting();
 								console.log(JSON.stringify(data))
 								if(data.RspCode == 0) {
 									datasource[title].refreshObj.TotalPage = data.RspData.TotalPage;
@@ -559,9 +559,9 @@
 								}
 							});
 						}
-						//					$.hideLoading();
+						//					events.closeWaiting();
 					}
-					//					$.showLoading();
+					//					events.showWaiting();
 					getNotice(pullRefresh,title_id, 'receive0', function(data) {
 						var ul = document.getElementById("ul0");
 						ul.appendChild(createFragment(ul, title_id, data));
