--- a/wisdomCampus/html/signIn/atterecords1.html
+++ b/wisdomCampus/html/signIn/atterecords1.html
@@ -39,6 +39,11 @@
 				/*查看图片时的背景*/
 				z-index: 999;
 			}
+			
+			.weui-input{
+				margin-top: 5px;
+				margin-bottom: 5px;
+			}
 		</style>
 	</head>
 
@@ -47,7 +52,7 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title">签到考勤</h1>
 		</header>
-		<div class="weui-tab scrollgo mui-content" id="attendData">
+		<div class="weui-tab mui-content" id="attendData">
 			<div class="weui-tab__bd">
 				<div id="tab1" class="weui-tab__bd-item weui-tab__bd-item--active  weui-pull-to-refresh infinite" style="width: 100%;">
 					<div class="weui-pull-to-refresh__layer">
