--- a/wisdomCampus/html/checkNotice/selectPeople.html
+++ b/wisdomCampus/html/checkNotice/selectPeople.html
@@ -48,6 +48,10 @@
 			.mui-table-view-cell:last-child:before {
 				height: 1px;
 			}
+			
+			.mui-table-view-cell>a:not(.mui-btn).mui-active {
+			    background-color: #fff;
+			}
 		</style>
 	</head>
 
