修改密码和关于我们 页面

--- a/wisdomCampus/html/mine/modifyPassword.html
+++ b/wisdomCampus/html/mine/modifyPassword.html
@@ -10,6 +10,27 @@
 			.mui-bar-nav {
 				background-color: #63BBFF;
 			}
+			
+			.btn-style{
+				background: #63BBFF;
+				color: #fff;
+				width: 94%;
+				height: 40px;
+				margin: 25px 0 0 3%;
+				font-size:17px ;
+			}
+			
+			.mui-input-group .mui-input-row {
+			    height: 45px;
+			}
+			
+			.mui-input-row label {
+			    padding: 14px 15px;
+			}
+			
+			.mui-input-row label~input{
+				padding: 22px 0;
+			}
 		</style>
 	</head>
 
@@ -18,9 +39,65 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">修改密码</h1>
 		</header>
+		<div class="mui-content">
+			<div class="mui-row" style="margin-top: 20px;">
+				<form id="form123" class="mui-input-group">
+					<div class="mui-input-row">
+						<label>原密码</label>
+						<input id="oldPassword" name='oldPassword' type="password"   class="mui-input-clear" placeholder="请输入密码"/>
+					</div>
+					<div class="mui-input-row">
+						<label>新密码</label>
+						<input id="newPassword" name='newPassword' type="password"  class="mui-input-clear" placeholder="请输入新密码"/>
+					</div>
+					<div class="mui-input-row">
+						<label>确认密码</label>
+						<input id="confirmPassword" name='confirmPassword' type="password" class="mui-input-clear" placeholder="请再次输入新密码"/>
+					</div>
+				</form>
+				<div class="select-btn">
+		 			<button class="mui-btn btn-style" onclick="modifyPassword()" id="select">确&nbsp;&nbsp;定</button>
+		 		</div>
+			</div>
+		</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/jquery.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
+			
+			//签到
+			function modifyPassword() {
+				var params = $('#form123').serializeObject();
+				if(params.oldPassword == '') {
+					mui.toast('请输入密码');
+				} else if(params.newPassword == '') {
+					mui.toast('请输入新密码');
+				} else if(params.confirmPassword == '') {
+					mui.toast('请再次输入新密码');
+				} else if(!(params.newPassword===params.confirmPassword)){
+					mui.toast('两次输入的密码不一致');
+				} else if(params.newPassword===params.oldPassword){
+					mui.toast('新密码不能与旧密码相同');
+				} else {
+					console.log('****************'+JSON.stringify(params))
+				}
+			}
+			
+			$.fn.serializeObject = function(){
+			    var o = {};
+			    var a = this.serializeArray();
+			    $.each(a, function() {
+			        if (o[this.name] !== undefined) {
+			            if (!o[this.name].push) {
+			                o[this.name] = [o[this.name]];
+			            }
+			            o[this.name].push(this.value || '');
+			        } else {
+			            o[this.name] = this.value || '';
+			        }
+			    });
+			    return o;
+			};
 		</script>
 	</body>
 
