--- a/wisdomCampus/html/mine/about.html
+++ b/wisdomCampus/html/mine/about.html
@@ -10,6 +10,21 @@
 			.mui-bar-nav {
 				background-color: #63BBFF;
 			}
+			.head-img {
+				width: 140px;
+				height: 140px;
+				margin: 0 auto;
+			}
+			.bottom-text{
+				position:fixed;
+				margin-left:auto;
+				margin-right: auto;
+				left:0;
+				right:0;
+				bottom:0;
+				width:100%;
+				text-align: center;
+			}
 		</style>
 	</head>
 
@@ -18,9 +33,39 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
 			<h1 class="mui-title" style="color: white;">关于我们</h1>
 		</header>
+		<div class="mui-content">
+			<div class="mui-row" style="background: #fff;padding: 20px 0;">
+				<center>
+					<img class="mui-media-object head-img" id="head-img" src="../../img/login/headImg.png">
+					<p id="version" class='mui-ellipsis'>账号:hellomui</p>
+				</center>
+			</div>
+			<div class="mui-row" style="margin-top: 15px;">
+				<ul class="mui-table-view mui-table-view-chevron">
+					<li class="mui-table-view-cell">
+						<a href="javaScript:void(0)" class="mui-navigate-right">功能介绍</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a href="javaScript:void(0)" class="mui-navigate-right">公司介绍</a>
+					</li>
+					<li class="mui-table-view-cell">
+						<a href="javaScript:void(0)" class="mui-navigate-right">帮助</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+		<div class="mui-row bottom-text">
+					<p class='mui-ellipsis'>Copyright&copy;2006-2018</p>
+					<p class='mui-ellipsis'>山东金视野教育股份科技有限公司</p>
+			</div>
 		<script src="../../js/mui.min.js"></script>
+		<script src="../../js/jquery.min.js"></script>
 		<script type="text/javascript">
 			mui.init()
+			
+			mui.plusReady(function(){
+				$('#version').html('智慧校园'+plus.runtime.version)
+			});
 		</script>
 	</body>
 
