--- a/wisdomCampus/html/index/home.html
+++ b/wisdomCampus/html/index/home.html
@@ -279,6 +279,13 @@
 				});
 			}
 
+			window.addEventListener('setHeadImg', function(data) {
+				console.log("data" + JSON.stringify(data.detail.imgurl))
+				mine.userImg = data.detail.imgurl;
+				mine1.userImg = data.detail.imgurl;
+			});
+				
+
 			//推送绑定
 			var bindInfo = function() {
 				var tempInfo00 = store.get(window.storageKeyName.PERSONALINFO);
