--- a/wisdomCampus/html/mine/headImg.html
+++ b/wisdomCampus/html/mine/headImg.html
@@ -34,7 +34,7 @@
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell mui-media" @click="modifyImg()">
 					<a href="javascript:;">
-						<img class="mui-media-object mui-pull-right" :src=peopleHeadImg style="border-radius:50%;width: 100%;height: 45px;">
+						<img class="mui-media-object mui-pull-right" :src=peopleHeadImg style="border-radius:50%;width:35px;height: 35px;">
 						<p class="mui-ellipsis">头像</p>
 					</a>
 				</li>
